# mlzoomcamp-midterm-project

./: Dockerfile  README.md  analysis.ipynb  gb_model.pkl  predict.py  predict_test.py  pyproject.toml  requirements.txt  train.py
